k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: backend
namespace: production
labels:
app: backend
spec:
replicas: 2
selector:
matchLabels:
app: backend
template:
metadata:
labels:
app: backend
spec:
containers:
- name: backend
image: gcr.io/still-primer-424112-t3/taskmaster-backend:<tag>
ports:
- containerPort: 8080
valueFrom:
secretKeyRef:
name: db-credentials
key: host
- name: DB_USER
valueFrom:
secretKeyRef:
name: db-credentials
key: user
- name: DB_PASSWORD
valueFrom:
secretKeyRef:
memory: "512Mi"
